Add generated code for crud operations

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "FamilyHubPrototypeContext": "Data Source=FamilyHubPrototypeContext-8dac7a56-f873-4366-ac47-d2d45868d7a8.db"
+  }
 }
